--- a/web/Views/Home/Index.cshtml
+++ b/web/Views/Home/Index.cshtml
@@ -83,12 +83,48 @@
             <hr>
             <div class="col-sm-4"></div>
             <div class="col-sm-4">
-                    <button type="button" class="btn btn-success">Finalizar Compra</button>
+                    <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">Finalizar Compra</button>
                     <button type="button" class="btn btn-danger">Cancelar compra</button>
             </div>
             <div class="col-sm-4"></div>
         </div>
         <hr>
+    </div>
+
+    <!-- The Modal -->
+    <div class="modal" id="myModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+
+        <!-- Modal Header -->
+        <div class="modal-header">
+            <h4 class="modal-title">Finalizar venda</h4>
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+
+        <!-- Modal body -->
+        <div class="modal-body">
+            <h2>Total: <span id="totalVenda"></span></h2>
+            <hr>
+            <p>Valor pago:</p>
+            <input type="number" placeholder="0.00" class="form-control" id="txtValorPago">
+            <p>Troco:</p>
+            <input type="number" placeholder="0.00" disabled class="form-control" id="txtValorTroco">  
+        </div>
+
+        <!-- Modal footer -->
+        <div class="modal-footer">
+            <div id="posVenda" style="display: none;"></div>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" id="btnFechar">Fechar</button>
+            </div>
+            <div id="preVenda">
+                <button type="button" class="btn btn-success" id="btnFinalizaVenda">Finalizar venda</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+            </div>
+        </div>
+
+        </div>
+    </div>
     </div>
 </body>
 <script src="~/js/frente.js"></script>
