--- a/web/Views/Gestao/Index.cshtml
+++ b/web/Views/Gestao/Index.cshtml
@@ -3,69 +3,103 @@
 }
 
 <!-- Icon Cards-->
-        <div class="row">
-          <div class="col-xl-3 col-sm-6 mb-3">
-            <div class="card text-white bg-primary o-hidden h-100">
-              <div class="card-body">
-                <div class="card-body-icon">
-                  <i class="fas fa-fw fa-comments"></i>
-                </div>
-                <div class="mr-5">Categorias</div>
-              </div>
-              <a class="card-footer text-white clearfix small z-1" asp-action="Categorias" asp-controller="Gestao">
-                <span class="float-left">Ver todas</span>
-                <span class="float-right">
-                  <i class="fas fa-angle-right"></i>
-                </span>
-              </a>
-            </div>
-          </div>
-          <div class="col-xl-3 col-sm-6 mb-3">
-            <div class="card text-white bg-warning o-hidden h-100">
-              <div class="card-body">
-                <div class="card-body-icon">
-                  <i class="fas fa-fw fa-list"></i>
-                </div>
-                <div class="mr-5">Fornecedores</div>
-              </div>
-              <a class="card-footer text-white clearfix small z-1" asp-action="Fornecedores" asp-controller="Gestao">
-                <span class="float-left">Ver todos</span>
-                <span class="float-right">
-                  <i class="fas fa-angle-right"></i>
-                </span>
-              </a>
-            </div>
-          </div>
-          <div class="col-xl-3 col-sm-6 mb-3">
-            <div class="card text-white bg-success o-hidden h-100">
-              <div class="card-body">
-                <div class="card-body-icon">
-                  <i class="fas fa-fw fa-shopping-cart"></i>
-                </div>
-                <div class="mr-5">Produtos</div>
-              </div>
-              <a class="card-footer text-white clearfix small z-1" asp-action="Produtos" asp-controller="Gestao">
-                <span class="float-left">Ver todos</span>
-                <span class="float-right">
-                  <i class="fas fa-angle-right"></i>
-                </span>
-              </a>
-            </div>
-          </div>
-          <div class="col-xl-3 col-sm-6 mb-3">
-            <div class="card text-white bg-danger o-hidden h-100">
-              <div class="card-body">
-                <div class="card-body-icon">
-                  <i class="fas fa-fw fa-life-ring"></i>
-                </div>
-                <div class="mr-5">Vendas</div>
-              </div>
-              <a class="card-footer text-white clearfix small z-1" href="#">
-                <span class="float-left">Ver todas</span>
-                <span class="float-right">
-                  <i class="fas fa-angle-right"></i>
-                </span>
-              </a>
-            </div>
-          </div>
+<div class="row">
+  <div class="col-xl-3 col-sm-6 mb-3">
+    <div class="card text-white bg-primary o-hidden h-100">
+      <div class="card-body">
+        <div class="card-body-icon">
+          <i class="fas fa-fw fa-comments"></i>
         </div>
+        <div class="mr-5">Categorias</div>
+      </div>
+      <a class="card-footer text-white clearfix small z-1" asp-action="Categorias" asp-controller="Gestao">
+        <span class="float-left">Ver todas</span>
+        <span class="float-right">
+          <i class="fas fa-angle-right"></i>
+        </span>
+      </a>
+    </div>
+  </div>
+  <div class="col-xl-3 col-sm-6 mb-3">
+    <div class="card text-white bg-warning o-hidden h-100">
+      <div class="card-body">
+        <div class="card-body-icon">
+          <i class="fas fa-fw fa-list"></i>
+        </div>
+        <div class="mr-5">Fornecedores</div>
+      </div>
+      <a class="card-footer text-white clearfix small z-1" asp-action="Fornecedores" asp-controller="Gestao">
+        <span class="float-left">Ver todos</span>
+        <span class="float-right">
+          <i class="fas fa-angle-right"></i>
+        </span>
+      </a>
+    </div>
+  </div>
+  <div class="col-xl-3 col-sm-6 mb-3">
+    <div class="card text-white bg-success o-hidden h-100">
+      <div class="card-body">
+        <div class="card-body-icon">
+          <i class="fas fa-fw fa-shopping-cart"></i>
+        </div>
+        <div class="mr-5">Produtos</div>
+      </div>
+      <a class="card-footer text-white clearfix small z-1" asp-action="Produtos" asp-controller="Gestao">
+        <span class="float-left">Ver todos</span>
+        <span class="float-right">
+          <i class="fas fa-angle-right"></i>
+        </span>
+      </a>
+    </div>
+  </div>
+  <div class="col-xl-3 col-sm-6 mb-3">
+    <div class="card text-white bg-danger o-hidden h-100">
+      <div class="card-body">
+        <div class="card-body-icon">
+          <i class="fas fa-fw fa-life-ring"></i>
+        </div>
+        <div class="mr-5">Vendas</div>
+      </div>
+      <a class="card-footer text-white clearfix small z-1" asp-action="Relatorio" asp-controller="Gestao">
+        <span class="float-left">Ver todas</span>
+        <span class="float-right">
+          <i class="fas fa-angle-right"></i>
+        </span>
+      </a>
+    </div>
+  </div>
+</div>
+<hr>
+<h2>Relatório de Vendas</h2>
+<hr>
+<canvas class="line-chart"></canvas>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+<script>
+  var enderecoRelVendas = "https://localhost:5001/Gestao/RelatorioVendas";
+  var labels = [];
+  var data = [];
+
+  $.post(enderecoRelVendas, function(dados, status){
+    console.log(dados);
+    for(var i =0; i < dados.length; i++){
+      labels.push(dados[i].data);
+      data.push(dados[i].total);
+    }
+
+    var canvas = document.getElementsByClassName("line-chart");
+    //chart.js
+    var grafico = new Chart(canvas,{
+      type: "line",
+      data: {
+        labels: labels,
+        datasets: [{
+          label: "Total de vendas em R$",
+          data: data,
+          borderWidth: 12,
+          borderColor: "#003399",
+          backgrounColor: "transparent"
+        }]
+      }
+    });
+  });
+</script>
