--- a/web/Views/Shared/_AdmLayout.cshtml
+++ b/web/Views/Shared/_AdmLayout.cshtml
@@ -86,7 +86,7 @@
     <!-- Sidebar -->
     <ul class="sidebar navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="index.html">
+        <a class="nav-link" asp-action="Index" asp-controller="Gestao">
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>Painel</span>
         </a>
@@ -117,9 +117,9 @@
           <span>Fornecedores</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link">
+        <a class="nav-link" asp-action="Index" asp-controller="Home">
           <i class="fas fa-fw fa-table"></i>
-          <span>Funcionários</span></a>
+          <span>Frente de Caixa</span></a>
       </li>
     </ul>
 
